assets/css/styles-6.scss
---
---
/*   
 * Template Name: Orbit - Responsive Resume/CV Template for Developers
 * Version: 1.0
 * Author: Xiaoying Riley
 * Twitter: @3rdwave_themes
 * License: Creative Commons Attribution 3.0 License
 * Website: http://themes.3rdwavemedia.com/
*/
/* styles-6.css */
/* ======= Base ======= */

.has-background {
  font-family: 'Roboto', sans-serif;
  color: #545E6C;
  background: #f5f5f5;
  font-size: 14px;
  {% if site.light %}
  padding: 0px;
  {% else %}
  padding: 30px;
  {% endif %}
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  .wrapper {
    background: #4B6A78;
    {% if site.light %}

    {% else %}
    max-width: 960px;
    margin: 0 auto;
    {% endif %}
    position: relative;
    -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
    -moz-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
  }
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 700;
}

a {
  color: #2e4049;
  -webkit-transition: all 0.4s ease-in-out;
  -moz-transition: all 0.4s ease-in-out;
  -ms-transition: all 0.4s ease-in-out;
  -o-transition: all 0.4s ease-in-out;
  &:hover {
    text-decoration: underline;
    color: #10171a;
  }
  &:focus {
    text-decoration: none;
  }
}

p {
  line-height: 1.5;
}

.sidebar-wrapper {
  background: #4B6A78;
  position: absolute;
  left: 0;
  width: 240px;
  height: 100%;
  min-height: 800px;
  color: #fff;
  a {
    color: #fff;
  }
  .profile-container {
    {% if site.light %}
    padding: 60px 30px 30px 30px;
    {% else %}
    padding: 30px;
    {% endif %}
    background: rgba(0, 0, 0, 0.2);
    text-align: center;
    color: #fff;
  }
  .name {
    font-size: 32px;
    font-weight: 900;
    margin-top: 0;
    margin-bottom: 10px;
  }
  .tagline {
    color: rgba(255, 255, 255, 0.6);
    font-size: 16px;
    font-weight: 400;
    margin-top: 0;
    margin-bottom: 0;
  }
  .profile {
    margin-bottom: 15px;
  }
  .contact-list {
    .fa {
      margin-right: 5px;
      font-size: 18px;
      vertical-align: middle;
    }
    li {
      margin-bottom: 15px;
      &:last-child {
        margin-bottom: 0;
      }
    }
    .email .fa {
      font-size: 14px;
    }
  }
  .container-block {
    padding: 30px;
  }
  .container-block-title {
    text-transform: uppercase;
    font-size: 16px;
    font-weight: 700;
    margin-top: 0;
    margin-bottom: 15px;
  }
  .degree {
    font-size: 14px;
    margin-top: 0;
    margin-bottom: 5px;
  }
  .education-container {
    .item {
      margin-bottom: 15px;
      &:last-child {
        margin-bottom: 0;
      }
    }
    .meta {
      color: rgba(255, 255, 255, 0.6);
      font-weight: 500;
      margin-bottom: 0px;
      margin-top: 0;
    }
    .time {
      color: rgba(255, 255, 255, 0.6);
      font-weight: 500;
      margin-bottom: 4px;
    }
  }
  .languages-container .lang-desc {
    color: rgba(255, 255, 255, 0.6);
  }
  .languages-list, .interests-list {
    margin-bottom: 0;
    li {
      margin-bottom: 10px;
      &:last-child {
        margin-bottom: 0;
      }
    }
  }
}

.main-wrapper {
  background: #fff;
  padding: 60px;
  padding-left: 300px;
  .section-title {
    text-transform: uppercase;
    font-size: 20px;
    font-weight: 500;
    color: #2e4049;
    position: relative;
    margin-top: 0;
    margin-bottom: 20px;
    .fa {
      width: 30px;
      height: 30px;
      margin-right: 8px;
      display: inline-block;
      color: #fff;
      -webkit-border-radius: 50%;
      -moz-border-radius: 50%;
      -ms-border-radius: 50%;
      -o-border-radius: 50%;
      border-radius: 50%;
      -moz-background-clip: padding;
      -webkit-background-clip: padding-box;
      background-clip: padding-box;
      background: #2e4049;
      text-align: center;
      padding-top: 8px;
      font-size: 16px;
      position: relative;
      top: -2px;
    }
  }
  .section {
    margin-bottom: 60px;
  }
  .experiences-section {
    .item {
      margin-bottom: 30px;
    }
    .meta {
      display: flex;
      flex-direction: row;
      align-items: center;
      margin-bottom: 10px;
      .row-wrapper {
        width: 100%;
      }
      .img-wrapper {
        height: auto;
        width: 30px;
        margin-right: 16px;
        margin-bottom: 4px;
        img {
          width: 30px;
          max-height: 100%;
        }
      }
    }
    .details {
      img {
        max-width: 100%;
        padding: 0px 20px 20px 20px;
      }
    }
  }
  .upper-row {
    position: relative;
    overflow: hidden;
    margin-bottom: 2px;
  }
  .job-title {
    color: #3F4650;
    font-size: 16px;
    margin-top: 0;
    margin-bottom: 0;
    font-weight: 500;
  }
  .time {
    position: absolute;
    right: 0;
    top: 0;
    color: #97AAC3;
  }
  .company {
    color: #97AAC3;
  }
  .project-title {
    font-size: 16px;
    font-weight: 400;
    margin-top: 0;
    margin-bottom: 5px;
  }
  .projects-section {
    .intro {
      margin-bottom: 30px;
    }
    .itemrow {
      display: flex;
      flex-direction: row;

      margin-bottom: 15px;
      box-sizing: border-box;

      
      img {
        max-width: 30px;
        max-height: 30px;
        height: auto;
        width: auto;
        margin-right: 16px;
        margin-top: 4px;
      }
      
      .item {
        flex-grow: 1;
        padding-right: 8px;
      }

      .item-stack {
        display: flex;
        flex-wrap: wrap;
        min-width: 50px;
        max-width: 50px;

        .tech {
          
          div {
            position: relative;
          }

          div:hover {
            img {
              filter: none;
              -webkit-filter: grayscale(0%);
              opacity: 1
            }
            .tooltip {
              opacity: 1;
              visibility: visible;
            }
          }

          img {
            max-width: 20px;
            max-height: 20px;
            width: auto;
            margin-right: 4px;
            margin-top: 4px;

            opacity: 0.55;
            -webkit-filter: grayscale(10%); /* Chrome 19+ & Safari 6+ */

            transition: opacity 0.7s;            
          }

          .tooltip {
            visibility: hidden;
            width: 90px;
            background-color: black;
            color: #fff;
            text-align: center;
            padding: 5px 0;
            border-radius: 6px;
            opacity: 0;

            position: absolute;
            z-index: 1;

            top: 140%;
            left: 50%;
            margin-left: -45px;

            font-size: 1.2rem;
            font-weight: 600;

            transition: opacity 0.7s;
          }

          .tooltip::after {
            content: " ";
            position: absolute;
            bottom: 100%;  /* At the top of the tooltip */
            left: 50%;
            margin-left: -5px;
            border-width: 5px;
            border-style: solid;
            border-color: transparent transparent black transparent;
          }
        }
      }
    }
  }
}

.title-year {
  margin: 50px 0px 0px 10px;
  font-weight: 400;
  color: #515862;
}

.post-row {
  margin: 0px 10px 0px 10px;
  display: flex;
  align-items: center;

  .title-container {
    flex-grow: 1;
  }

  .date {
    font-weight: 400;
    color: #515862;
  }

  p {
    font-size: 1.8rem;
    margin: 10px 4px 10px 4px;
  }
}

.index-container {
  .posts {
    a {
      color: #4B6A78;
      text-decoration: underline;
    }
    .excerpt {
      font-size: larger;
      margin: 0px 14px 0px 14px;
    }
  }

  .about {
    position: relative;
    background: rgb(75, 106, 120);

    display: flex;
    flex-direction: column;

    .top {
      height: 10px;
      background: #f5f5f5;
    }

    .bottom {
      height: 110px;
      text-align: center;

      p {
        position: absolute;
        top: 40px;
        left: 20%;
        right: 20%;
      }
    }
    .info {
      height: 160px;
      width: 65%;
      position: absolute;

      margin-left: auto;
      margin-right: auto;
      left: 0;
      right: 0;
      top: -40px;

      display: flex;
      flex-direction: column;
      align-items: center;
      text-align: center;
      color: #f5f5f5;

      font-size: 1.7rem;
      font-weight: 300;

      .profile-img {
        margin-bottom: 5px;
        max-width: 100px;
      }

      .about-text {
        height: 100%;
        display: flex;
        align-items: center;
      }
    }
  }
}

.post-wrapper {
  max-width: 960px;
  width: 80%;
  margin: 50px auto 0px auto;

  background: #fff;
  font-size: 1.3em;

  img {
    max-width: 100% !important;
    padding: 5% !important;
  }

  a {
    color: #4B6A78;
    text-decoration: underline;
  }

  .highlight code {
    font-size: 1.2em;
  }

  .date {
    display: flex;
    justify-content: center;
  }

  h1 {
    font-weight: 500;
    color: #515862
  }
  
  h4 {
    font-weight: 500;
    color: #515862
  }
}

.post-list {
  max-width: 960px;
  margin: 0 auto;
  background: #fff;
  padding: 0px 150px 0px 150px;
}

.main-container {
  max-width: 800px;
  margin: 0 auto;
  font-family: 'Roboto';
}

.blog-header {
  background: #f5f5f5;
  border-radius: 0px;
  font-family: 'Roboto', 'sans-serif';
  font-weight: 600;
  margin-bottom: 0;
}

.skillset {
  .item {
    margin-bottom: 15px;
    overflow: hidden;
  }
  .level-title {
    font-size: 14px;
    margin-top: 0;
    margin-bottom: 12px;
  }
  .level-bar {
    height: 12px;
    background: #f5f5f5;
  }
  .level-bar-inner {
    height: 12px;
    background: #6c92a3;
  }
}

.footer {
  padding: 15px;
  padding-top: 30px;
  .copyright {
    line-height: 1.6;
    color: #c3c9d1;
    font-size: 13px;
  }
  .fa-heart {
    color: #fcd5cc;
  }
  a {
    color: #9fa3a4;
  }
}

.blog-footer {
  padding: 15px;
}

/* Extra small devices (phones, less than 768px) */
{% if site.light %}

{% else %}
@media (max-width: 767px) {
  .sidebar-wrapper {
    position: static;
    width: inherit;
  }
  .main-wrapper {
    padding: 30px;
    .time {
      position: static;
      display: block;
      margin-top: 5px;
    }
    .upper-row {
      margin-bottom: 0;
    }
  }
  .post-wrapper {
    width: 90%;
  }
  .index-container .about .bottom {
    height: 120px;
  }
}
{% endif %}

/* Small devices (tablets, 768px and up) */
/* Medium devices (desktops, 992px and up) */
// @media (min-width: 992px) {
  .skillset {
    .level-title {
      display: inline-block;
      float: left;
      width: 30%;
      margin-bottom: 0;
    }
    .level-bar {
      display: inline-block;
      width: 70%;
      float: left;
      position: relative;
      top: 1px;
    }
  }
// }

/* Large devices (large desktops, 1200px and up) */
/* Ex-Large devices (large desktops, 1200px and up) */

/* 
used for profile image
*/

.profile-img {
  max-width: 100px;
  margin-bottom: 15px;
  border: 0px solid #fff;
  border-radius: 100%;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
}

